# test-orders

./: .gitignore  Dockerfile  Dockerfile.dev  constraints.txt  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
commands/: start.sh  start_dev.sh
src/: alembic.ini
src/app/: main.py
src/app/common/: __init__.py  dependencies.py  enums.py  exceptions.py  http.py  logging_config.py  rabbitmq.py  redis.py  routers.py  settings.py
src/app/common/exceptions/: __init__.py  exceptions.py  handlers.py  register.py
src/app/db/: sessions.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 89a9cea0ef73_product_and_order_models.py
src/app/db/models/: __init__.py  base.py  orders.py  products.py
src/app/events/: schemas.py
src/app/infrastructure/adapters/: http_client.py
src/app/infrastructure/db/: sessions.py
src/app/infrastructure/db/migrations/: env.py
src/app/infrastructure/db/models/: __init__.py  base.py  orders.py  products.py
src/app/infrastructure/repositories/fake/: base.py  orders.py
src/app/interfaces/repositories/: __init__.py  base.py  orders.py  users.py
src/app/orders/: cache.py  routers.py  schemas.py  services.py
src/app/products/: schemas.py
src/app/repositories/inmemory/: base.py
src/app/repositories/sqlalchemy/: __init__.py  base.py  orders.py
src/app/users/: routers.py  schemas.py  services.py
src/tests/: conftest.py
src/tests/api/: api_auth_test.py  api_test.py
src/tests/fixtures/: users.py
src/tests/integration/: repo_test.py
src/tests/unit/: schema_test.py
(+8 files in other folders)
