[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["assyadyu <assya.dyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
bandit = "^1.8.0"
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.28.0"
isort = "^5.13.2"
pylint = "^3.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
